<resources>
    <!-- General strings -->
    <string name="app_name">Aurora</string>

    <!-- Menu strings -->
    <string name="home">Home</string>
    <string name="about_us">About Us</string>
    <string name="settings">Settings</string>
    <string name="help_feedback">Help &amp; Feedback</string>
    <string name="plugin_market">Plugin Market</string>
    <string name="action_search">Search</string>
    <string name="search_prompt">Search for a file...</string>

    <!-- Navigation Drawer strings-->
    <string name="nav_header_title">Aurora</string>
    <string name="nav_header_subtitle">Experience files differently</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>

    <!-- Recycler View strings -->
    <string name="button_open">Open</string>
    <string name="empty_recent">Press the button to open a file with Aurora!</string>

    <!-- Card File strings -->
    <string name="file_location">\'Location of the file\'</string>
    <string name="file_last">Last opened on:</string>
    <string name="file_added_on">Added on:</string>
    <string name="file_more_details">Hold for more info...</string>
    <string name="file_details">Details about file</string>
    <string name="null_file">The selected file was null</string>
    <string name="file_not_found">The file could not be found</string>

    <!-- Plugin Chooser strings -->
    <string name="plugin_name">Plugin name</string>
    <string name="plugin_description">Plugin description</string>

    <!-- Feedback Activity -->
    <string name="feedback_sent">Feedback sent, thank you!</string>
    <string name="feedback_wrong">Something went wrong. Are you connected to the internet?</string>
    <string name="feedback_empty">Please enter your feedback first.</string>
    <string name="enter_feedback">Enter your feedback here</string>
    <string name="feedback_title">Feedback</string>


    <!-- Feedback activity -->
    <string name="feedback_send">Send</string>
    <string name="feedback_edittext_hint">Enter your feedback here</string>

    <!-- Plugin Market -->
    <string name="download_plugin">Downloading the new plugin!</string>
    <string name="downloading">Downloading... See the progress in your notification bar!</string>
    <string name="already_installed">The plugin is already installed!</string>
    <string name="already_downloading">The plugin is downloading! Check the progress in your notification header</string>
    <string name="creator">Creator</string>
    <string name="description">Description</string>
    <string name="version">Version</string>
    <string name="no_internet_connection">Could not load plugins from the server...</string>

    <string name="select_plugin">Select a plugin</string>
    <string name="no_plugins_available">No plugins available</string>

    <!-- User warnings -->
    <string name="plugin_not_in_registry">The plugin was not found in the registry!</string>
    <string name="cached_file_not_found">The cached file was not found</string>
    <string name="title_marketplugin_list">Plugin Market</string>
    <string name="title_marketplugin_detail">MarketPlugin Detail</string>
    <string name="cached_file_not_found_processing_file">The cached file was not found. Processing file.</string>
    <string name="could_not_open_plugin">The plugin could not be opened.</string>
    <string name="something_went_wrong">Something went wrong…</string>

    <!-- Service Permission -->
    <string name="service_permission_label">Aurora Services</string>
    <string name="service_permission_description">Allows the app to make use of Aurora services</string>

    <string name="plugin_processing_failed">The plugin\'s processing failed.</string>
    <string name="plugin_failed_label">plugin failed</string>
    <string name="plugin_logo_description">Plugin logo</string>
    <string name="icon_of_the_plugin">The icon of the plugin</string>
    <string name="open_file_with_other_app">Open file with other app</string>


</resources>
