<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">
    <!-- Contents of the navigation view -->
    <!-- One of these is selected -->
    <group
        android:id="@+id/main_menu_top">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_nav_home"
            android:title="@string/home"/>
        <item
            android:id="@+id/nav_help_feedback"
            android:icon="@drawable/ic_nav_help"
            android:title="@string/help_feedback"/>
    </group>
    <group
        android:id="@+id/main_menu_bottom">
        <item
            android:id="@+id/nav_plugin_market"
            android:icon="@drawable/ic_shopping_cart_black"
            android:title="@string/plugin_market"
        />
    </group>
</menu>
