<?xml version="1.0" encoding="utf-8"?>
<!-- The main view for the ViewHolder of the RecyclerView -->
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv_file"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/fc_margin_horizontal"
    android:layout_marginTop="@dimen/fc_margin_vertical"
    android:layout_marginRight="@dimen/fc_margin_horizontal"
    app:cardCornerRadius="@dimen/fc_corner_radius"
    app:cardElevation="@dimen/fc_elevation">

    <!-- This LinearLayout holds the whole content of the cardview -->
    <android.support.constraint.ConstraintLayout
        android:id="@+id/cv_fl_base_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:padding="@dimen/fc_padding">

        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.8"/>

        <!-- File name -->
        <!-- Gravity "start" in stead of "left".
            Users might use right to left text flow. -->
        <TextView
            android:id="@+id/tv_card_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/fc_large_text"
            android:textStyle="bold"
            android:singleLine="true"
            android:ellipsize="middle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/iv_icon" />

        <!-- Description of the file -->
        <TextView
            android:id="@+id/tv_card_last_opened"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/file_last"
            android:textSize="@dimen/fc_small_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_card_title"/>

        <ImageView
            android:id="@+id/iv_icon"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="fitEnd"
            android:contentDescription="@string/icon_of_the_plugin"
            app:layout_constraintBottom_toBottomOf="@id/cv_fl_base_card"
            app:layout_constraintEnd_toEndOf="@id/cv_fl_base_card"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@id/cv_fl_base_card" android:layout_marginStart="8dp"/>

        <!-- Details of the file -->
        <!-- TODO: Remove invisibility if details should be used! -->
        <TextView
            android:id="@+id/tv_card_more_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/file_more_details"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/cv_fl_base_card"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_card_location"/>

        <!-- Include file detail content -->
        <include
            layout="@layout/card_file_detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="@id/cv_fl_base_card"
            app:layout_constraintTop_toBottomOf="@+id/tv_card_location"/>
    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>